--- a/src/components/issues/issues.style.sass
+++ b/src/components/issues/issues.style.sass
@@ -27,7 +27,6 @@
         justify-content: center
         margin-top: auto
         align-items: center
-        z-index: 1
 
         li
             margin-bottom: 1rem
